; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_stream_close.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_checkout.c_checkout_stream_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.checkout_stream = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @checkout_stream_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @checkout_stream_close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.checkout_stream*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = bitcast i32* %4 to %struct.checkout_stream*
  store %struct.checkout_stream* %5, %struct.checkout_stream** %3, align 8
  %6 = load %struct.checkout_stream*, %struct.checkout_stream** %3, align 8
  %7 = icmp ne %struct.checkout_stream* %6, null
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.checkout_stream*, %struct.checkout_stream** %3, align 8
  %10 = getelementptr inbounds %struct.checkout_stream, %struct.checkout_stream* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br label %13

13:                                               ; preds = %8, %1
  %14 = phi i1 [ false, %1 ], [ %12, %8 ]
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.checkout_stream*, %struct.checkout_stream** %3, align 8
  %18 = getelementptr inbounds %struct.checkout_stream, %struct.checkout_stream* %17, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load %struct.checkout_stream*, %struct.checkout_stream** %3, align 8
  %20 = getelementptr inbounds %struct.checkout_stream, %struct.checkout_stream* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @p_close(i32 %21)
  ret i32 %22
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @p_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
